--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -19,8 +19,9 @@
           <button id="btnLang" class="ghost" aria-haspopup="true" aria-expanded="false">
             <span data-i18n="actions.language">Idioma</span>
           </button>
-          <button id="btnTheme" class="ghost" aria-haspopup="true" aria-expanded="false">
-            <span data-i18n="actions.theme">Tema</span>
+          <button id="btnTheme" class="ghost icon-only" type="button" aria-pressed="false">
+            <span class="sr-only" data-i18n="actions.toggleTheme">Alternar tema</span>
+            <span aria-hidden="true" data-theme-icon>☀️</span>
           </button>
           <div class="user-menu" role="group" aria-label="User menu">
             <button id="btnUser" class="ghost" aria-haspopup="true" aria-expanded="false">
