--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -60,6 +60,7 @@
                 >
                   <span class="icon" aria-hidden="true">⚙️</span>
                   <span class="label" data-i18n="nav.settings">Configurações</span>
+                  <span class="submenu-caret" aria-hidden="true">▾</span>
                 </button>
                 <ul id="settings-submenu" class="submenu" hidden>
                   <li>
