--- a/miniapps/base_shell/auth/register.html
+++ b/miniapps/base_shell/auth/register.html
@@ -77,6 +77,13 @@
                       <span class="sr-only" data-i18n="actions.toggleTheme">Alternar tema</span>
                     </button>
                   </li>
+                  <li>
+                    <button id="btnUserPanel" class="submenu-action" type="button">
+                      <span class="submenu-icon" aria-hidden="true">👤</span>
+                      <span class="submenu-label" aria-hidden="true" data-i18n="settings.userPanel">Painel do usuário</span>
+                      <span class="sr-only" data-i18n="actions.openUserPanel">Abrir painel do usuário</span>
+                    </button>
+                  </li>
                 </ul>
               </li>
             </ul>
