Keep footer visible with revision metadata

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -107,7 +107,14 @@
         </main>
       </div>
       <footer class="app-footer" role="contentinfo">
-        <small>&copy; <span data-i18n="footer.copyright">2024 Organização Exemplo</span></small>
+        <div class="footer-content">
+          <small class="footer-copy">
+            &copy; <span data-i18n="footer.copyright">2024 Organização Exemplo</span>
+          </small>
+          <small class="footer-revision" data-revision data-i18n="footer.revisionFallback">
+            MiniApp Base · Revisão indisponível
+          </small>
+        </div>
       </footer>
     </div>
     <script type="module" src="./app.js"></script>
