Document Base Shell validation checks

--- a/miniapps/base_shell/index.html
+++ b/miniapps/base_shell/index.html
@@ -118,8 +118,19 @@
           <small class="footer-copy">
             &copy; <span data-i18n="footer.copyright">2024 Organização Exemplo</span>
           </small>
-          <small class="footer-revision" data-revision data-i18n="footer.revisionFallback">
-            MiniApp Base · Revisão indisponível
+          <small class="footer-revision">
+            <span data-revision data-i18n="footer.revisionFallback">
+              MiniApp Base · Revisão indisponível
+            </span>
+            <a
+              class="footer-revision-log"
+              href="./REVISION_LOG.md"
+              target="_blank"
+              rel="noopener noreferrer"
+              data-i18n="footer.revisionLog"
+            >
+              Log de revisões
+            </a>
           </small>
         </div>
       </footer>
